name:                   libxlsxwriter-hs
version:                0.0.0
author:                 Supercede <tech@supercede.com>
maintainer:             Supercede <tech@supercede.com>
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md
category:               FFI, Xlsx
synopsis:               Bindings to libxlsxwriter

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:
    XlsxWriter
    , XlsxWriter.Common
    , XlsxWriter.Format
    , XlsxWriter.Workbook
    , XlsxWriter.Worksheet
    , XlsxWriter.Utility
--  build-tool-depends: c2hs:c2hs
  extra-libraries: xlsxwriter
  build-depends:
      base                  >= 4       && < 5
    , bytestring            >= 0.10.12 && < 0.11

source-repository head
  type:     git
  location: git://github.com/SupercedeTech/libxlsxwriter-hs.git
